--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "nohasa",
   "version": "0.0.0",
   "private": false,
+  "engines": {
+    "node": "8.11.1"
+  },
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www"
