--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.11",
+    "memory-cache": "^0.2.0",
     "morgan": "~1.9.0",
     "nodemon": "^1.18.6",
     "nouislider": "^12.1.0",
